# aiquamplusplus

./: .gitignore  Aiquam.cpp  Aiquam.hpp  AiquamPlusPlus.cpp  AiquamPlusPlus.hpp  AiquammPlusPlus.hpp  Area.cpp  Area.hpp  Areas.cpp  Areas.hpp  CMakeLists.txt  Config.cpp  Config.hpp  LICENSE  README.md  WacommAdapter.cpp  WacommAdapter.hpp  main.cpp
examples/: aiquam.json  areas.json
scripts/: download.sh  run_experiments.py  shp2json.py
